--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings" : {
+ "DefaultConnection": "Server=Localhost; database=dotnet-user;Trusted_Connection=true;"
+
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
